--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/?user=root
-spring.datasource.username = debora
+spring.datasource.username = deborasantos
 spring.datasource.password = password
 
 ## Hibernate Properties
