mudança de users mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ logging.level.org.hibernate.type.descriptor.sql=trace
 
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/?user=root
-spring.datasource.username = deborasantos
-spring.datasource.password = password
+spring.datasource.username = user
+spring.datasource.password = pass123
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the..
