configurando url do mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/?user=root
-spring.datasource.username = user
+spring.datasource.url = jdbc:mysql://localhost:3306/aulamineda?useTimezone=true&serverTimezone=UTC
+spring.datasource.username = debora
 spring.datasource.password = pass123
 
 ## Hibernate Properties
