--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/?user=debora
+spring.datasource.url = jdbc:mysql://localhost:3306/?user=debora
 spring.datasource.username = debora
 spring.datasource.password = pass123
 
