mudei debora para 'user'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 ##Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/?user=debora
-spring.datasource.username = debora
+spring.datasource.url = jdbc:mysql://localhost:3306/aulamineda
+spring.datasource.username = user
 spring.datasource.password = pass123
 
 ## Hibernate Properties
