Arrumando as rotas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+## Server
+server.port=8082
+server.servlet.context-path=/livros
+
 ## Logging
 # Show sql statement
 logging.level.org.hibernate.SQL=debug
